<resources>

    <!-- Root Dialog -->
    <string name="root_dialog_title">Root access required</string>
    <string name="root_dialog_desc_main">You need to have your phone rooted in order to use Auto Airplane Mode.</string>
    <string name="root_dialog_desc_exit">This App will now close.</string>
    <string name="root_dialog_ok_button">I got it</string>

    <!-- Main Page UI -->
    <string name="app_name">Auto Airplane Mode</string>
    <string name="toggle_app">Toggle App</string>
    <string name="airplane_mode_starts">Airplane mode starts at</string>
    <string name="airplane_mode_ends">Airplane mode ends at</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="trigger_on">Trigger on</string>
    <string name="default_time_start" translatable="false">23:00</string>
    <string name="default_time_end" translatable="false">08:00</string>
    <string name="next_day">(next day)</string>

    <!-- Toast displayed when setting time -->
    <string name="toast_next_airplane_mode_today">Next airplane mode is scheduled today</string>
    <string name="toast_next_airplane_mode_tomorrow">Next airplane mode is scheduled tomorrow</string>
    <string name="toast_next_airplane_mode_later">Airplane mode is scheduled to %1$s at %2$s</string>

    <!-- Toolbar -->
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <!-- About Dialog -->
    <string name="about_description_main">This App can be used to schedule when this phone should switches automatically to Airplane mode.</string>
    <string name="about_description_sleep_well">Sleep well!</string>
    <string name="about_ok_button">Great!</string>

    <!-- App Shortcut -->
    <string name="shortcut_short_label">Settings</string>
    <string name="shortcut_long_label">Open settings</string>
    <string name="shortcut_disabled">Open settings is disabled</string>

    <!-- Settings Page UI -->
    <string name="settings_notification_label">Notification</string>
    <string name="settings_notification_switch">Display when entering in airplane mode</string>

    <!-- Notification -->
    <string name="notification_title">Airplane mode enabled automatically</string>
    <string name="notification_content">Will be disabled at %s</string>
    <string name="title_activity_settings">Settings</string>
</resources>
