<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/trigger_on">

        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/monday"
            android:key="switch_2" />
        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/tuesday"
            android:key="switch_3" />
        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/wednesday"
            android:key="switch_4" />
        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/thursday"
            android:key="switch_5" />
        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/friday"
            android:key="switch_6" />
        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/saturday"
            android:key="switch_7" />
        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/sunday"
            android:key="switch_1" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_notification_label">
        <SwitchPreference
            android:defaultValue="true"
            android:key="notification_airplane_mode_started"
            android:title="@string/settings_notification_switch"
            android:inputType="textMultiLine"
            android:minLines="5" />
    </PreferenceCategory>

</PreferenceScreen>
