<shortcuts xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="openSettings"
        android:enabled="true"
        android:icon="@drawable/ic_action_settings"
        android:shortcutShortLabel="@string/shortcut_short_label"
        android:shortcutLongLabel="@string/shortcut_long_label"
        android:shortcutDisabledMessage="@string/shortcut_disabled"
        tools:targetApi="n_mr1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="org.miamplayer.autoairplanemode"
            android:targetClass="org.miamplayer.autoairplanemode.SettingsActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>
