<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="org.miamplayer.autoairplanemode.MainActivity">

        <Switch
            android:id="@+id/switchEnableAirplane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:checked="true"
            android:switchTextAppearance="@android:style/TextAppearance.Material.Small"
            android:text="@string/airplane_mode_starts"
            tools:checked="true" />

        <TextView
            android:id="@+id/editEnableAirplane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/switchEnableAirplane"
            android:text="@string/default_time_start"
            android:textAppearance="@android:style/TextAppearance.Material.Display3" />

        <Switch
            android:id="@+id/switchDisableAirplane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editEnableAirplane"
            android:checked="true"
            android:switchTextAppearance="@android:style/TextAppearance.Material.Small"
            android:text="@string/airplane_mode_ends"
            tools:checked="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/switchDisableAirplane"
            android:layout_alignParentStart="true"
            android:weightSum="1"
            android:gravity="bottom"
            android:id="@+id/linearLayout">

            <TextView
                android:id="@+id/editDisableAirplane"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:text="@string/default_time_end"
                android:textAppearance="@android:style/TextAppearance.Material.Display3" />

            <TextView
                android:id="@+id/nextDay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/next_day"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>